change to dotfiles

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,38 +1,111 @@
-# improve colors
-set -g default-terminal 'screen-256color'
+# this line is needed to allow tmux to copy to OSX clipboard
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
-
-# act like GNU screen
+# remap prefix to Control + a
+set -g prefix C-f
 unbind C-b
-set -g prefix C-a
+bind C-f send-prefix
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# quick pane cycling
+unbind ^F
+bind ^F select-pane -t :.+
+
+# new 25% vertical split pane
+bind ^T split-window -p 25
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
+set -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+# utf-8 character support in the statusbar
+set -g status-utf8 on
 
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+# lower the delay between the prefix key and other keys (fixes pause when using vim)
+set -sg escape-time 1
 
-# increase scrollback lines
-set -g history-limit 10000
+# use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# switch to last pane
-bind-key C-a last-pane
+# setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+# update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# select panes with <Prefix> h, j, k, l
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# cycle windows with C-h and C-l
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# default terminal
+set -g default-terminal "screen-256color"
+
+set -g history-limit 5000
+
+# rebind pane splitting
+bind | split-window -h
+bind - split-window -v
+
+# set window notifications
+setw -g monitor-activity on
+set -g visual-activity on
+
+# resize panes
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r H resize-pane -L 5
+bind -r L resize-pane -R 5
+
+# dont auto-name my windows!
+setw -g automatic-rename off
+
+# not really sure what this does, but with it, the scrollwheel works inside Vim
+set-option -g mouse-utf8 on
+
+# colors
+set -g status-fg colour7 # status fg
+set -g status-bg colour0 # status bg
+set -g status-attr default
+
+setw -g window-status-fg colour10 # default window title fg
+setw -g window-status-bg default # default window title bg
+setw -g window-status-attr default # default window title attribute
+
+setw -g window-status-current-fg colour2 # current window title fg
+setw -g window-status-current-bg default # current window title bg
+
+set -g pane-border-fg colour10
+set -g pane-border-bg default
+set -g pane-active-border-fg colour2
+set -g pane-active-border-bg default 
+
+set -g message-bg colour1
+set -g message-fg colour7
+
+set -g display-panes-active-colour colour33
+set -g display-panes-colour colour166
+
+setw -g clock-mode-colour colour64
+
+set -g status-utf8 on # utf-8 character support in the statusbar
+set -g status-left-length 40
+set -g status-left "#[fg=colour10]Session: #S"
+set -g status-right "#[fg=colour10][%m/%d/%Y %l:%M%p]"
+set -g status-justify centre # center window list
+
+# Use mouse in TMUX
+set -g mode-mouse on
