Update gitconfig, gitignore_global and tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -108,4 +108,4 @@ set -g status-right "#[fg=colour10][%m/%d/%Y %l:%M%p]"
 set -g status-justify centre # center window list
 
 # Use mouse in TMUX
-set -g mode-mouse on
+set-window-option -g mode-mouse on
